# ffmock

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  _2github_2workspace_2inc_2ffmock_2ffmock_8h-example.html  annotated.html  classes.html  classffmock_1_1Mock-members.html  classffmock_1_1Mock.html  classffmock_1_1Mock_1_1Guard-members.html  classffmock_1_1Mock_1_1Guard.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_c0e210c6893d70ba66a993d9f5883ae6.html  examples.html  ffmock_8h.html  ffmock_8h_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  index.html  menudata.js  namespaceffmock.html  namespaces.html  structffmock_1_1function__traits.html  structffmock_1_1function__traits_3_01RetType__t_01____cdecl_07Args__t_8_8_8_08_4-members.html  structffmock_1_1function__traits_3_01RetType__t_01____cdecl_07Args__t_8_8_8_08_4.html  structffmock_1_1function__traits_3_01RetType__t_01____stdcall_07Args__t_8_8_8_08_4-members.html  structffmock_1_1function__traits_3_01RetType__t_01____stdcall_07Args__t_8_8_8_08_4.html
.github/actions/cmake-base/: action.yml
.github/workflows/: action.yml  cmake-base.yml  cmake-single-platform.yml  cmake-x64-debug.yml  cmake-x64-release.yml  cmake-x86-debug.yml  cmake-x86-release.yml  doxygen.yml  msbuild-x64-debug.yml  msbuild-x64-release.yml  msbuild-x86-debug.yml  msbuild-x86-release.yml  ninja-x64-debug.yml  ninja-x64-release.yml  ninja-x86-debug.yml  ninja-x86-release.yml  release-please.yml
demo/dll/: CMakeLists.txt  Service.def
demo/inc/: Common.hpp  cl.rsp  cl32.rsp  cl64.rsp  def.rsp  src.rsp
demo/lib/: CMakeLists.txt  EventLog.cpp  Registry.cpp  Registry.hpp  SCM.hpp  Service.cpp
demo/py/: exports.py
demo/tst/: CMakeLists.txt  FFmockUnitTests.cpp  FFmockUnitTests.manifest  FFmockUnitTests.rc  Mocks.cpp  Mocks.def  Mocks.hpp
dll/: CMakeLists.txt  Service.def
docs/: DoxyFile
inc/: Common.hpp  cl.rsp  def.rsp  link.rsp  src.rsp
inc/ffmock/: ffmock.h
inc/umock/: umock.h
lib/: CMakeLists.txt  Registry.cpp  Registry.hpp  SCM.cpp  SCM.hpp  Service.cpp  Service.hpp
py/: generate_mocks.py
search/: all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_1.js  variables_2.js
tst/: CMakeLists.txt  FFmockUnitTests.cpp  FFmockUnitTests.manifest  Mocks.cpp  Mocks.def  Mocks.hpp  UmockUnitTests.cpp
